unified_tests/methods/method_parameter_missing_type_after_self/expect/build.text.stderr
lib.copp:2:31: error: expected identifier
      function show(self, other:) -> string {
                                ^
lib.copp:6:1: error: expected symbol
  
lib.copp:6:1: error: expected symbol
  
